--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "lint--fix": "eslint . --fix"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.5",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.51.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
