--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-native": "^0.72.5",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
