--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint": "^8.51.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
