--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native-stack": "^6.9.16",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.5",
     "expo": "~49.0.15",
@@ -23,7 +24,8 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
